--- a/pom.xml
+++ b/pom.xml
@@ -4,31 +4,92 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>dev.geco</groupId>
+    <groupId>dev.geco.gholo</groupId>
     <artifactId>GHolo</artifactId>
     <name>GHolo</name>
-    <version>1.0.5</version>
-    <description>Create Holos with modern Technology, great Performance and Animations!</description>
-    <url>https://www.spigotmc.org/resources/70913</url>
+    <version>1.0.0</version>
+    <description>Create holos &amp; displays with animations, images and more!</description>
+    <url>https://www.spigotmc.org/resources/</url>
+    <inceptionYear>2023</inceptionYear>
     <packaging>pom</packaging>
+
+    <licenses>
+        <license>
+            <name>GNU General Public License v3.0</name>
+        </license>
+    </licenses>
+
+    <issueManagement>
+        <system>GitHub Issues</system>
+        <url>https://github.com/Gecolay/GHolo/issues</url>
+    </issueManagement>
 
     <modules>
         <module>core</module>
+        <module>mcv1_17_R1</module>
+        <module>mcv1_17_R1_2</module>
+        <module>mcv1_18_R1</module>
+        <module>mcv1_18_R2</module>
+        <module>mcv1_19_R1</module>
+        <module>mcv1_19_R1_2</module>
+        <module>mcv1_19_R2</module>
+        <module>mcv1_19_R3</module>
         <module>v1_17_R1</module>
         <module>v1_17_R1_2</module>
         <module>v1_18_R1</module>
         <module>v1_18_R2</module>
         <module>v1_19_R1</module>
         <module>v1_19_R1_2</module>
+        <module>v1_19_R2</module>
+        <module>v1_19_R3</module>
         <module>dist</module>
     </modules>
 
     <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <build>
         <defaultGoal>clean install</defaultGoal>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.4.1</version>
+                <configuration>
+                    <minimizeJar>true</minimizeJar>
+                    <createDependencyReducedPom>false</createDependencyReducedPom>
+                    <shadedArtifactAttached>false</shadedArtifactAttached>
+                    <outputDirectory>./target</outputDirectory>
+                    <filters>
+                        <filter>
+                            <artifact>*:*</artifact>
+                            <excludes>
+                                <exclude>META-INF/license/**</exclude>
+                                <exclude>META-INF/*</exclude>
+                                <exclude>META-INF/maven/**</exclude>
+                                <exclude>build.properties</exclude>
+                            </excludes>
+                        </filter>
+                    </filters>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
