--- a/v1_17_R1/pom.xml
+++ b/v1_17_R1/pom.xml
@@ -7,24 +7,51 @@
     <artifactId>v1_17_R1</artifactId>
 
     <parent>
-        <groupId>dev.geco</groupId>
+        <groupId>dev.geco.gholo</groupId>
         <artifactId>GHolo</artifactId>
-        <version>1.0.5</version>
+        <version>1.0.0</version>
     </parent>
 
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spigot.version>1.17-R0.1-SNAPSHOT</spigot.version>
+        <mcv.version>v1_17_R1</mcv.version>
     </properties>
 
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.4.1</version>
+                <configuration>
+                    <minimizeJar>false</minimizeJar>
+                    <createDependencyReducedPom>false</createDependencyReducedPom>
+                    <shadedArtifactAttached>false</shadedArtifactAttached>
+                    <outputDirectory>./target</outputDirectory>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <relocations>
+                                <relocation>
+                                    <pattern>${project.groupId}.mcv.x</pattern>
+                                    <shadedPattern>${project.groupId}.mcv.${project.artifactId}</shadedPattern>
+                                </relocation>
+                            </relocations>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>net.md-5</groupId>
                 <artifactId>specialsource-maven-plugin</artifactId>
-                <version>1.2.2</version>
+                <version>1.2.4</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -57,13 +84,6 @@
         </plugins>
     </build>
 
-    <repositories>
-        <repository>
-            <id>spigot-repo</id>
-            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
-        </repository>
-    </repositories>
-
     <dependencies>
         <dependency>
             <groupId>org.spigotmc</groupId>
@@ -73,8 +93,8 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>dev.geco</groupId>
-            <artifactId>core</artifactId>
+            <groupId>dev.geco.gholo</groupId>
+            <artifactId>mcv1_17_R1</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
