--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <name>GHolo</name>
     <version>1.0.0</version>
     <description>Create holos &amp; displays with animations, images and more!</description>
-    <url>https://www.spigotmc.org/resources/</url>
+    <url>https://www.spigotmc.org/resources/000000</url>
     <inceptionYear>2023</inceptionYear>
     <packaging>pom</packaging>
 
@@ -26,22 +26,26 @@
 
     <modules>
         <module>core</module>
-        <module>mcv1_17_R1</module>
-        <module>mcv1_17_R1_2</module>
-        <module>mcv1_18_R1</module>
-        <module>mcv1_18_R2</module>
-        <module>mcv1_19_R1</module>
-        <module>mcv1_19_R1_2</module>
-        <module>mcv1_19_R2</module>
-        <module>mcv1_19_R3</module>
-        <module>v1_17_R1</module>
-        <module>v1_17_R1_2</module>
-        <module>v1_18_R1</module>
-        <module>v1_18_R2</module>
-        <module>v1_19_R1</module>
-        <module>v1_19_R1_2</module>
-        <module>v1_19_R2</module>
-        <module>v1_19_R3</module>
+        <module>mcv1_17</module>
+        <module>mcv1_17_1</module>
+        <module>mcv1_18</module>
+        <module>mcv1_18_2</module>
+        <module>mcv1_19</module>
+        <module>mcv1_19_1</module>
+        <module>mcv1_19_3</module>
+        <module>mcv1_19_4</module>
+        <module>mcv1_20</module>
+        <module>mcv1_20_2</module>
+        <module>v1_17</module>
+        <module>v1_17_1</module>
+        <module>v1_18</module>
+        <module>v1_18_2</module>
+        <module>v1_19</module>
+        <module>v1_19_1</module>
+        <module>v1_19_3</module>
+        <module>v1_19_4</module>
+        <module>v1_20</module>
+        <module>v1_20_2</module>
         <module>dist</module>
     </modules>
 
